--- a/blqw.HttpRequest/blqw.HttpRequest.csproj
+++ b/blqw.HttpRequest/blqw.HttpRequest.csproj
@@ -56,7 +56,9 @@
     <Compile Include="IOC\MEF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestContentType.cs" />
+    <Compile Include="RequestPool.cs" />
     <Compile Include="SimpleRequest.cs" />
+    <Compile Include="TaskTimeout.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
