* 新增同步版本,基于原有的HttpWebRequest实现 * 优化异步版本,基于HttpClient重新实现

--- a/blqw.HttpRequest/blqw.HttpRequest.csproj
+++ b/blqw.HttpRequest/blqw.HttpRequest.csproj
@@ -51,12 +51,12 @@
     <Compile Include="HttpParameterCollection.cs" />
     <Compile Include="HttpQueryString.cs" />
     <Compile Include="HttpRequest.cs" />
+    <Compile Include="HttpRequestSync.cs" />
     <Compile Include="HttpRequestMethod.cs" />
     <Compile Include="IOC\Component.cs" />
     <Compile Include="IOC\MEF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestContentType.cs" />
-    <Compile Include="RequestPool.cs" />
     <Compile Include="SimpleRequest.cs" />
     <Compile Include="TaskTimeout.cs" />
   </ItemGroup>
