--- a/blqw.HttpRequest/blqw.HttpRequest.csproj
+++ b/blqw.HttpRequest/blqw.HttpRequest.csproj
@@ -49,10 +49,15 @@
     <Compile Include="Base\HttpParamsBase.cs" />
     <Compile Include="EncodeURI.cs" />
     <Compile Include="HttpBodyParsers\HttpFormBodyParser.cs" />
+    <Compile Include="HttpBodyParsers\HttpJsonBodyParser.cs" />
+    <Compile Include="HttpBodyParsers\HttpProtobufBodyParser.cs" />
+    <Compile Include="HttpBodyParsers\HttpXMLBodyParser.cs" />
+    <Compile Include="Interface\IHttpBodyParserFactory.cs" />
+    <Compile Include="Sealed\HttpRequestMethod.cs" />
     <Compile Include="Sealed\HttpBody.cs" />
     <Compile Include="Interface\IHttpBodyParser.cs" />
     <Compile Include="Interface\IHttpParameterCollection.cs" />
-    <Compile Include="Sealed\HttpBodyParsers.cs" />
+    <Compile Include="Sealed\HttpBodyParserFactory.cs" />
     <Compile Include="Sealed\HttpClientSync.cs" />
     <Compile Include="Sealed\HttpContentType.cs" />
     <Compile Include="Sealed\HttpHeaders.cs" />
