--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -61,6 +61,7 @@
     <Compile Include="HttpBodyParsers\HttpProtobufBodyParser.cs" />
     <Compile Include="HttpBodyParsers\HttpXMLBodyParser.cs" />
     <Compile Include="Interface\IHttpBodyParserFactory.cs" />
+    <Compile Include="Sealed\HttpContentTypes.cs" />
     <Compile Include="Sealed\HttpDefaultLogger.cs" />
     <Compile Include="Sealed\HttpQueryBuilder.cs" />
     <Compile Include="Sealed\HttpRequestMethod.cs" />
