--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HttpParamsExtensions.cs" />
     <Compile Include="Interface\IHttpRequestBase.cs" />
     <Compile Include="Interface\IHttpLogger.cs" />
+    <Compile Include="Params\LazyHttpParameterCollection.cs" />
     <Compile Include="Reflection\PropertyGetter.cs" />
     <Compile Include="Sealed\EncodeURI.cs" />
     <Compile Include="HttpBodyParsers\HttpBodyDefaultParser.cs" />
