--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -51,6 +51,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\blqw.Httpdoer.Generator\blqw.Httpdoer.Generator.csproj">
+      <Project>{944f1950-e158-4dbd-928d-895420f12161}</Project>
+      <Name>blqw.Httpdoer.Generator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\blqw.Httpdoer\blqw.Httpdoer.csproj">
       <Project>{135d11d6-46e5-41bf-9db2-6f033293b260}</Project>
       <Name>blqw.Httpdoer</Name>
