--- a/blqw.Httpdoer.Generator/blqw.Httpdoer.Generator.csproj
+++ b/blqw.Httpdoer.Generator/blqw.Httpdoer.Generator.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="blqw.DyCompiler, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.DyCompiler.1.0.0\lib\net45\blqw.DyCompiler.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,8 +55,12 @@
     <Compile Include="Attributes\HttpPost.cs" />
     <Compile Include="Attributes\HttpPut.cs" />
     <Compile Include="Attributes\HttpVerb.cs" />
+    <Compile Include="Generators\GeneratorClass.cs" />
+    <Compile Include="Generators\GeneratorMethod.cs" />
+    <Compile Include="Generators\GeneratorParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpGenerator.cs" />
+    <Compile Include="TypeName.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\blqw.Httpdoer\blqw.Httpdoer.csproj">
@@ -60,7 +68,9 @@
       <Name>blqw.Httpdoer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
