--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Bind.cs" />
     <Compile Include="ITranslate.cs" />
+    <Compile Include="IMyTestApi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
