--- a/blqw.AliyunOSS/blqw.AliyunOSS.csproj
+++ b/blqw.AliyunOSS/blqw.AliyunOSS.csproj
@@ -47,9 +47,9 @@
     <Compile Include="UploadFile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\blqw.Httpdoer\blqw.Httpdoer.csproj">
+    <ProjectReference Include="..\blqw.HttpRequest\blqw.HttpRequest.csproj">
       <Project>{135d11d6-46e5-41bf-9db2-6f033293b260}</Project>
-      <Name>blqw.Httpdoer</Name>
+      <Name>blqw.HttpRequest</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
