--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -12,9 +12,9 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
-      http请求客户端
+      http请求客户端,支持rest
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>HttpClient Http WebClient</tags>
+    <tags>HttpClient Http WebClient RestClient</tags>
   </metadata>
 </package>
