--- a/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.nuspec
+++ b/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.nuspec
@@ -12,9 +12,9 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
-      http请求客户端,支持rest
+      Httpdoer 扩展组件
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>HttpClient Http WebClient RestClient blqw</tags>
+    <tags>HttpClient Http WebClient RestClient blqw Httpdoer</tags>
   </metadata>
 </package>
