--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -13,6 +13,7 @@
     <description>$description$</description>
     <releaseNotes>
       http请求客户端,支持rest
+      2016.06.30 IHttpRequest增加一个属性FullUrl
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
