--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -13,9 +13,9 @@
     <description>$description$</description>
     <releaseNotes>
       http请求客户端,支持rest
-      2016.06.30 
-      IHttpRequest增加一个属性FullUrl
-      现在可以绑定多个日志记录器和跟踪器
+      2016.07.04
+      * 增加ContentType可以直接设定解析器
+      * 增加Stream解析器
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
