增加HttpRequest拓展方法

--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -51,10 +51,11 @@
     <Compile Include="Base\HttpParamsBase.cs" />
     <Compile Include="Clients\Httpdoer.cs" />
     <Compile Include="Clients\HttpClientAsync.cs" />
+    <Compile Include="Extensions\HttpRequestExtensions.cs" />
     <Compile Include="HttpBodyParsers\HttpBodyParsers.cs" />
     <Compile Include="HttpBodyParsers\HttpNullBodyParser.cs" />
     <Compile Include="HttpBodyParsers\HttpStreamBodyParser.cs" />
-    <Compile Include="HttpParamsExtensions.cs" />
+    <Compile Include="Extensions\HttpParamsExtensions.cs" />
     <Compile Include="Interface\IHttpRequestBase.cs" />
     <Compile Include="Interface\IHttpLogger.cs" />
     <Compile Include="Interface\IHttpTracking.cs" />
