--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bind.cs" />
+    <Compile Include="Bing.cs" />
     <Compile Include="ITranslate.cs" />
     <Compile Include="IMyTestApi.cs" />
     <Compile Include="Program.cs" />
