--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Interface\IHttpRequestBase.cs" />
     <Compile Include="Interface\IHttpLogger.cs" />
     <Compile Include="Interface\IHttpTracking.cs" />
+    <Compile Include="IOC\MEFLite.cs" />
     <Compile Include="Params\LazyHttpParameterCollection.cs" />
     <Compile Include="Reflection\PropertyGetter.cs" />
     <Compile Include="Sealed\EncodeURI.cs" />
@@ -87,7 +88,6 @@
     <Compile Include="Interface\IHttpRequest.cs" />
     <Compile Include="Interface\IHttpResponse.cs" />
     <Compile Include="IOC\Component.cs" />
-    <Compile Include="IOC\MEF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\HttpRequest.cs" />
     <Compile Include="Sealed\HttpRequestData.cs" />
@@ -101,6 +101,7 @@
   <ItemGroup>
     <None Include="blqw.Httpdoer.nuspec" />
     <None Include="nuget-pack.bat" />
+    <None Include="update-ioc.ps1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
