--- a/BuiBuiAPI/BuiBuiAPI.csproj
+++ b/BuiBuiAPI/BuiBuiAPI.csproj
@@ -46,13 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuibuiTracking.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormLogger.cs" />
+    <Compile Include="BuibuiLogger.cs" />
     <Compile Include="MethodExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
