--- a/blqw.AliyunOSS/blqw.AliyunOSS.csproj
+++ b/blqw.AliyunOSS/blqw.AliyunOSS.csproj
@@ -47,7 +47,7 @@
     <Compile Include="UploadFile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\blqw.HttpRequest\blqw.HttpRequest.csproj">
+    <ProjectReference Include="..\blqw.Httpdoer\blqw.Httpdoer.csproj">
       <Project>{135d11d6-46e5-41bf-9db2-6f033293b260}</Project>
       <Name>blqw.HttpRequest</Name>
     </ProjectReference>
