--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
-      http请求客户端,支持rest
+      HTTP 请求客户端,支持rest
       2016.07.26
       * 修复不设置Method的情况下报错的问题
     </releaseNotes>
