--- a/BuiBuiAPI/packages.config
+++ b/BuiBuiAPI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="blqw.Convert3" version="2.1.3" targetFramework="net461" />
-  <package id="blqw.Json" version="2.8.1" targetFramework="net461" />
+  <package id="blqw.Convert3" version="3.0.3-beta" targetFramework="net461" />
+  <package id="blqw.IOC" version="1.3.5" targetFramework="net461" />
+  <package id="blqw.Json" version="3.1.1" targetFramework="net461" />
 </packages>
