--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="blqw.Json" version="2.7.6" targetFramework="net45" />
+  <package id="blqw.Convert3" version="3.0.3-beta" targetFramework="net45" />
+  <package id="blqw.IOC" version="1.3.5" targetFramework="net45" />
+  <package id="blqw.Json" version="3.1.1" targetFramework="net45" />
 </packages>
