--- a/BuiBuiAPI/BuiBuiAPI.csproj
+++ b/BuiBuiAPI/BuiBuiAPI.csproj
@@ -41,8 +41,8 @@
       <HintPath>..\packages\blqw.IOC.1.3.5\lib\net45\blqw.IOC.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="blqw.Json, Version=3.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\blqw.Json.3.1.1\lib\net45\blqw.Json.dll</HintPath>
+    <Reference Include="blqw.Json, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Json.3.1.2-beta\lib\net45\blqw.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
