--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -44,8 +44,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="blqw.Json, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\git\blqw.Json\blqw.Json\bin\Debug\blqw.Json.dll</HintPath>
+      <HintPath>..\packages\blqw.Json.3.1.2-beta\lib\net45\blqw.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
