--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="blqw.Convert3" version="3.0.3-beta" targetFramework="net45" />
   <package id="blqw.IOC" version="1.3.5" targetFramework="net45" />
-  <package id="blqw.Json" version="3.1.1" targetFramework="net45" />
+  <package id="blqw.Json" version="3.1.2-beta" targetFramework="net45" />
 </packages>
