#### [1.4.1-beta]2016.10.07 * 修复访问某些网站或者API时返回`分析URI“xxx”的 Cookie 标头时出错`的问题

--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -16,6 +16,8 @@
       #### [1.4.0-beta]2016.10.07
       * 使用IOC优化自定义`ContentType`的处理方式
       * 更新`blqw.IOC`
+      #### [1.4.1-beta]2016.10.07
+      * 修复访问某些网站或者API时返回`分析URI“xxx”的 Cookie 标头时出错`的问题
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
