--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Base\HttpBodyParserBase.cs" />
     <Compile Include="Base\HttpParamsBase.cs" />
+    <Compile Include="Clients\HttpClientProvider.cs" />
     <Compile Include="Clients\Httpdoer.cs" />
     <Compile Include="Clients\HttpClientAsync.cs" />
     <Compile Include="Extensions\HttpRequestExtensions.cs" />
@@ -61,7 +62,6 @@
     <Compile Include="HttpBodyParsers\HttpNullBodyParser.cs" />
     <Compile Include="HttpBodyParsers\HttpStreamBodyParser.cs" />
     <Compile Include="Extensions\HttpParamsExtensions.cs" />
-    <Compile Include="Interface\IHttpRequestBase.cs" />
     <Compile Include="Interface\IHttpTracking.cs" />
     <Compile Include="Params\LazyDeserializeBodyParameters.cs" />
     <Compile Include="Reflection\PropertyHandler.cs" />
