#### [1.5.2]2016.11.04 * 新增一些静态方法`Httpdoer.Get`等 * 修复请求没有Path的Url时,会在结尾处加上`/`的问题 * 优化当domain,path,query,对query参数合并的处理逻辑 * 新增`ToString('q')`方法可以返回带参数的请求地址

--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -17,6 +17,11 @@
       * 新增请求支持设置 `IWebProxy`
       #### [1.5.1]2016.10.27
       * 修复提交json数据时格式错误的问题
+      #### [1.5.2]2016.11.04
+      * 新增一些静态方法`Httpdoer.Get`等
+      * 修复请求没有Path的Url时,会在结尾处加上`/`的问题
+      * 优化当domain,path,query,对query参数合并的处理逻辑
+      * 新增`ToString('q')`方法可以返回带参数的请求地址
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
